--- a/css/styles.css
+++ b/css/styles.css
@@ -326,16 +326,17 @@ img {
   border-radius: 50%;
   background-color: var(--button-color);
   cursor: pointer;
-  padding: 12px;
 }
 
 .social-link {
   display: block;
   height: 100%;
   width: 100%;
+  padding: 12px;
 }
 
 .link-icon {
+  display: block;
   height: 16px;
   width: 16px;
 }
@@ -389,7 +390,6 @@ img {
   display: block;
   height: 100%;
   width: 100%;
-  text-align: center;
   padding: 16px 32px;
 }
 .clients-item:focus,
